--- a/cars/templates/cars/login.html
+++ b/cars/templates/cars/login.html
@@ -1,17 +1,19 @@
 {% extends 'cars/base.html' %}
 
 {% block content %}
-<h1>{{title}}</h1>
-<form method="post">
-    {% csrf_token %}
-
-<div class="form-error">{{ form.non_field_errors }}</div>
-
-{% for f in form %}
-<p><label class="form-label" for="{{ f.id_for_label }}">{{f.label}}: </label>{{ f }}</p>
-<div class="form-error">{{ f.errors }}</div>
-{% endfor %}
-
-    <button type="submit">Войти</button>
-</form>
+<main>
+    <div class="login_block">
+        <form method="post">
+            {% csrf_token %}
+            <p class="head_form">Вход</p>
+            {% for f in form %}
+                <p><label class="form_label" for="{{ f.id_for_label }}"></label></p>
+                <p>{{ f }}</p>
+                <div class="form_error">{{ f.errors }}</div>
+            {% endfor %}
+            <button class="login_btn" type="submit"><span>Войти</span></button>
+            <div class="form_error">{{ form.non_field_errors }}</div>
+        </form>
+    </div>
+</main>
 {% endblock %}
