--- a/cars/static/cars/css/styles.css
+++ b/cars/static/cars/css/styles.css
@@ -25,7 +25,7 @@ header {
 .content-text h1 {font-size: 32px;}
 
 header {
-	background: #fde61b;
+	background: #f6f4f4;
 	height: 60px;
 	position:  fixed;
 	width: 100%;
@@ -416,4 +416,39 @@ main {
 
 .register_btn span {
 	font-size: 20px;
+}
+
+
+.list-pages {
+	margin-top: 20px;
+	text-align: center;
+}
+
+.list-pages ul {
+	display: inline-block;
+	padding: 0;
+	margin: 0;
+}
+
+.list-pages li {
+	display: inline-block;
+	margin-right: 5px;
+}
+
+.list-pages li a {
+	display: inline-block;
+	width: 25px;
+	height: 25px;
+	border-radius: 50%;
+	background-color: #0aabea;
+	color: #fff;
+	text-align: center;
+	line-height: 25px;
+	text-decoration: none;
+	border: 2px solid #0aabea;
+}
+
+.list-pages li.page-num-selected a {
+	background-color: #eee;
+	color: #0aabea;
 }
