Pagination moved to bottom

--- a/cars/templates/cars/base.html
+++ b/cars/templates/cars/base.html
@@ -32,14 +32,12 @@
 				</ul>
 		</header>
 {% endblock mainmenu %}
-
-
-
-
 	<div class="content-text">
 {% block content %}
 {% endblock %}
 	</div>
 </div>
+{% block footer %}
+{% endblock %}
 </body>
 </html>
