--- a/cars/templates/cars/index.html
+++ b/cars/templates/cars/index.html
@@ -60,28 +60,29 @@
             <ul>
                 {% if page_obj.has_previous %}
                     <li class="page-num">
-                        <a href="?page={{ page_obj.previous_page_number }}">&lt;</a>
+                        <a href="?page={{ page_obj.previous_page_number }}&brand={{ brand_filter }}&sort={{ sort_filter }}&author={{ author_filter }}">&lt;</a>
                     </li>
                 {% endif %}
-
+    
                 {% for p in paginator.page_range %}
                     {% if page_obj.number == p %}
                         <li class="page-num page-num-selected">{{ p }}</li>
                     {% elif p >= page_obj.number|add:-2 and p <= page_obj.number|add:2 %}
                         <li class="page-num">
-                            <a href="?page={{ p }}">{{ p }}</a>
+                            <a href="?page={{ p }}&brand={{ brand_filter }}&sort={{ sort_filter }}&author={{ author_filter }}">{{ p }}</a>
                         </li>
                     {% endif %}
                 {% endfor %}
-
+    
                 {% if page_obj.has_next %}
                     <li class="page-num">
-                        <a href="?page={{ page_obj.next_page_number }}">&gt;</a>
+                        <a href="?page={{ page_obj.next_page_number }}&brand={{ brand_filter }}&sort={{ sort_filter }}&author={{ author_filter }}">&gt;</a>
                     </li>
                 {% endif %}
             </ul>
         </nav>
-        {% endif %}
+    {% endif %}
+    
     </footer>
     <p>
         
