--- a/cars/templates/cars/base.html
+++ b/cars/templates/cars/base.html
@@ -1,43 +1,47 @@
 {% load static %}
+
 <!DOCTYPE html>
 <html>
 <head>
-	<title>{{title}}</title>
-	<link type="text/css" href="{% static 'cars/css/styles.css' %}" rel="stylesheet" />
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{{title}}</title>
+    <link type="text/css" href="{% static 'cars/css/styles.css' %}" rel="stylesheet" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-{% block mainmenu %}
-		<header>
-			<a href="{% url 'home' %}" class="menu-button"></a></li>
-			<ul id="mainmenu" class="mainmenu">
-				<li><a href="{% url 'home' %}">Главная</a></li>
-	{% for m in menu %}
-				<li><a href="{% url m.url_name %}">{{m.title}}</a></li>
-	{% endfor %}
-	{% if request.user.is_authenticated %}
-				<li><a href="{% url 'addpage' %}">Добавить статью</a></li>
-	{% endif %}
-	{% if request.user.is_authenticated and request.user.is_moder %}
-				<li><a href="{% url 'modering' %}">Проверить статью</a></li>
-	{% endif %}
-	
-	{% if request.user.is_authenticated %}
-				<a href="{{user.get_absolute_url}}"><img class="user-photo" src="/media/{{ user.photo }}"></a>
-				<li class="last"><a href="{{user.get_absolute_url}}">{{user.username}}</a> | <a href="{% url 'logout' %}">Выйти</a></li>
-	{% else %}
-				<li class="last"><a href="{% url 'register' %}">Регистрация</a> | <a href="{% url 'login' %}">Войти</a></li>
-	{% endif %}
-				</ul>
-		</header>
-{% endblock mainmenu %}
-	<div class="content-text">
-{% block content %}
-{% endblock %}
-	</div>
-</div>
-{% block footer %}
-{% endblock %}
+    {% block mainmenu %}
+        <header>
+            <a href="{% url 'home' %}" class="menu-button"></a></li>
+            <ul id="mainmenu" class="mainmenu">
+                <li><a href="{% url 'home' %}">Главная</a></li>
+                {% for m in menu %}
+                    <li><a href="{% url m.url_name %}">{{m.title}}</a></li>
+                {% endfor %}
+
+                {% if request.user.is_authenticated %}
+                    <li><a href="{% url 'addpage' %}">Добавить статью</a></li>
+                    <a href="{{user.get_absolute_url}}"><img class="user-photo" src="/media/{{ user.photo }}"></a>
+                    <li class="last"><a href="{{user.get_absolute_url}}">{{user.username}}</a> | <a href="{% url 'logout' %}">Выйти</a></li>
+                {% else %}
+                    <li class="last"><a href="{% url 'register' %}">Регистрация</a> | <a href="{% url 'login' %}">Войти</a></li>
+                {% endif %}
+
+                {% if request.user.is_authenticated and request.user.is_moder %}
+                    <li><a href="{% url 'modering' %}">Проверить статью</a></li>
+                {% endif %}
+
+            </ul>
+        </header>
+    {% endblock mainmenu %}
+
+    <div class="content-text">
+        {% block content %}
+        {% endblock %}
+    </div>
+
+    <footer>
+        {% block footer %}
+        {% endblock %}
+    </footer>
 </body>
 </html>
