--- a/cars/templates/cars/addpage.html
+++ b/cars/templates/cars/addpage.html
@@ -7,7 +7,7 @@
         {% csrf_token %}
         <div class="form-error">{{ form.non_field_errors }}</div>
         {% for field in form %}
-            <p><label class="form-label" for="{{ field.id_for_label }}">{{f.label}}: </label>{{ field }}</p>
+            <p><label class="form-label" for="{{ field.id_for_label }}">{{field.label}}: </label>{{ field }}</p>
             <div class="form-error">{{ field.errors }}</div>
         {% endfor %}
         <button type="submit">Добавить</button>
