--- a/cars/templates/account/edit_profile.html
+++ b/cars/templates/account/edit_profile.html
@@ -6,12 +6,12 @@
     <form method="post">
         {% csrf_token %}
         <div class="form-error">{{ form.non_field_errors }}</div>
-        {% for f in form %}
-            <p><label class="form-label" for="{{ f.id_for_label }}">{{f.label}}: </label>{{ f }}</p>
-            <div class="form-error">{{ f.errors }}</div>
+        {% for field in form %}
+            <p><label class="form-label" for="{{ f.id_for_label }}">{{field.label}}: </label>{{ field }}</p>
+            <div class="form-error">{{ field.errors }}</div>
         {% endfor %}
         <button type="submit">Сохранить изменения</button>
     </form>
-    
+
     <a href="{% url 'editpassword' %}"><button type="submit">Изменить пароль</button></a>
 {% endblock %}
