--- a/cars/templates/account/register.html
+++ b/cars/templates/account/register.html
@@ -6,10 +6,10 @@
         <form method="post">
             {% csrf_token %}
             <p class="head_form">Регистрация</p>
-            {% for f in form %}
-                <p><label class="form_label" for="{{ f.id_for_label }}"></label></p>
-                <p>{{ f }}</p>
-                <div class="form_error">{{ f.errors }}</div>
+            {% for field in form %}
+                <p><label class="form_label" for="{{ field.id_for_label }}"></label></p>
+                <p>{{ field }}</p>
+                <div class="form_error">{{ field.errors }}</div>
             {% endfor %}
             <button class="register_btn" type="submit"><span>Регистрация</span></button>
             <div class="form_error">{{ form.non_field_errors }}</div>
