base.html is JS-ready now

--- a/cars/templates/cars/base.html
+++ b/cars/templates/cars/base.html
@@ -43,5 +43,15 @@
         {% block footer %}
         {% endblock %}
     </footer>
+    
+    <script src="//cdn.jsdelivr.net/npm/js-cookie@3.0.1/dist/js.cookie.min.js"></script>
+    <script>
+        const csrftoken = Cookies.get('csrftoken');
+        document.addEventListener('DOMContentLoaded', (event) => {
+            // DOM загружена
+            {% block domready %}
+            {% endblock %}
+        })
+    </script>
 </body>
 </html>
