Added likes to posts

--- a/cars/templates/cars/post.html
+++ b/cars/templates/cars/post.html
@@ -20,14 +20,24 @@
         {% endif %}
     </p>
 
-    <form method="POST" action="{% url 'add_like' post.slug %}">
-        {% csrf_token %}
-        {% if request.user.is_authenticated %}
-            <button type="submit">Понравилось: {{post.likes_amount}}</button>
-        {% else %}
-            <p>{{post.likes_amount}}</p>
-        {% endif %}
-    </form>
+    <!-- Кнопка лайка -->
+    {% with total_likes=post.users_like.count users_like=post.users_like.all %}
+            <div>
+                <span class="count">
+                    <span class="total">{{ total_likes }}</span>
+                    like{{ total_likes|pluralize }}
+                </span>
+                {% if request.user.is_authenticated %}
+                    <a href="#" data-post_slug="{{ post.slug }}" data-action="{% if request.user in users_like %}un{% endif %}like" class="like button">
+                        {% if request.user not in users_like %}
+                            Like
+                        {% else %}
+                            Unlike
+                        {% endif %}
+                    </a>
+                {% endif %}
+            </div>
+    {% endwith%}
 
     <!-- Создание комментария -->
     {% if request.user.is_authenticated and post.is_published == True %}
@@ -50,4 +60,45 @@
         </h3>
         <p>{{comment.content}}</p>
     {% endfor %}
+{% endblock %}
+
+{% block domready %}
+  const url = '{% url "add_like" %}';
+  var options = {
+    method: 'POST',
+    headers: {'X-CSRFToken': csrftoken},
+    mode: 'same-origin'
+  }
+
+  document.querySelector('a.like')
+          .addEventListener('click', function(e){
+    e.preventDefault();
+    var likeButton = this;
+
+    // add request body
+    var formData = new FormData();
+    formData.append('post_slug', likeButton.dataset.post_slug);
+    formData.append('action', likeButton.dataset.action);
+    options['body'] = formData;
+
+    // send HTTP request
+    fetch(url, options)
+    .then(response => response.json())
+    .then(data => {
+      if (data['status'] === 'ok')
+      {
+        var previousAction = likeButton.dataset.action;
+
+        // toggle button text and data-action
+        var action = previousAction === 'like' ? 'unlike' : 'like';
+        likeButton.dataset.action = action;
+        likeButton.innerHTML = action;
+
+        // update like count
+        var likeCount = document.querySelector('span.count .total');
+        var totalLikes = parseInt(likeCount.innerHTML);
+        likeCount.innerHTML = previousAction === 'like' ? totalLikes + 1 : totalLikes - 1;
+      }
+    })
+  });
 {% endblock %}
