--- a/cars/templates/account/profile.html
+++ b/cars/templates/account/profile.html
@@ -16,7 +16,7 @@
                 {% if p.photo %}
                     <p class="link-read-post"><a href="{{ p.get_absolute_url }}"><img class="img-article-left thumb" src="/media/{{ p.photo }}" alt="Фото"></a></p>
                 {% endif %}
-                <h2><a href="{{ p.get_absolute_url }}">{{ p.brand.name }} {{ p.title }}</a></h2>
+                <h2><a href="{{ p.get_absolute_url }}">{{ p.title }}</a></h2>
                 <p>{{ p.short_content }}</p>
                 {% if p.is_published == False %}
                     <p class="link-read-post"><a>На проверке</a></p>
