--- a/account/templates/account/authors_list.html
+++ b/account/templates/account/authors_list.html
@@ -1,22 +1,12 @@
 {% extends 'cars/base.html' %}
+{% load account_tags %}
 
 {% block content %}
     {% for user in users %}
     <a href="{{ user.get_absolute_url }}">
         <div>
             <h3>{{user.first_name}} {{user.last_name}}</h3>
-            {% if request.user.is_authenticated %}
-                    <a href="#" data-user_slug="{{ user.slug }}" 
-                                data-action="{% if request.user in user.followers.all %}un{% endif %}follow" 
-                                class="follow button">
-                        {% if request.user not in user.followers.all %}
-                            Подписаться
-                        {% else %}
-                            Отписаться
-                        {% endif %}
-                    </a>
-            {% endif %}
-            <span class="count">Подпищиков: <span class="total">{% if user.followers.count %}{{user.followers.count}}{% else %}0{% endif %}</span>
+            {% subscribe_button user %}
             <p>Статей: {% if user.posts.count %}{{user.posts.count}}{% else %}0{% endif %}</p>
         </div>
     </a>
