--- a/account/templates/account/includes/subscribe_button.html
+++ b/account/templates/account/includes/subscribe_button.html
@@ -1,11 +1,15 @@
-<a href="#" data-user_slug="{{ user.slug }}" 
-            data-action="{% if request.user in user.followers.all %}un{% endif %}follow" 
-            class="follow button">
-    {% if request.user not in user.followers.all %}
-        Подписаться
-    {% else %}
-        Отписаться
-    {% endif %}
-</a>
+{% if request.user.is_authenticated %}
+    <a href="#" data-user_slug="{{ user.slug }}" 
+                data-action="{% if request.user in user.followers.all %}un{% endif %}follow" 
+                class="follow button">
+        {% if request.user not in user.followers.all %}
+            Подписаться
+        {% else %}
+            Отписаться
+        {% endif %}
+    </a>
 
-<span class="count">Подпищиков: <span class="total">{% if user.followers.count %}{{user.followers.count}}{% else %}0{% endif %}</span>
+    <span class="count">Подпищиков: <span class="total">{% if user.followers.count %}{{user.followers.count}}{% else %}0{% endif %}</span>
+{% else %}
+    <span class="count">Подпищиков: <span class="total">{% if user.followers.count %}{{user.followers.count}}{% else %}0{% endif %}</span>
+{% endif %}
