--- a/cars/templates/cars/base.html
+++ b/cars/templates/cars/base.html
@@ -18,7 +18,11 @@
 
                 {% if request.user.is_authenticated %}
                     <li><a href="{% url 'addpage' %}">Добавить статью</a></li>
-                    <a href="{{user.get_absolute_url}}"><img class="user-photo" src="/media/{{ user.photo }}"></a>
+                    {% if user.photo %}
+                        <a href="{{ user.get_absolute_url }}"><img class="user-photo" src="/media/{{ user.photo }}"></a>
+                    {% else %}
+                        <a href="{{ user.get_absolute_url }}"><img class="user-photo" src="{% static 'images/default_profile_photo.png' %}"></a>
+                    {% endif %}
                     <li class="last"><a href="{{user.get_absolute_url}}">{{user.username}}</a> | <a href="{% url 'logout' %}">Выйти</a></li>
                 {% else %}
                     <li class="last"><a href="{% url 'register' %}">Регистрация</a> | <a href="{% url 'login' %}">Войти</a></li>
