--- a/cars/static/cars/css/styles.css
+++ b/cars/static/cars/css/styles.css
@@ -460,3 +460,57 @@ main {
 	background-color: #eee;
 	color: #0aabea;
 }
+
+/* users */
+
+#users-list img {
+    width: 180px;
+    height: 180px;
+    border-radius: 50%;
+    margin-bottom: 20px;
+}
+
+#users-list .user {
+    width: 180px;
+    float: left;
+    overflow: auto;
+    padding: 10px;
+}
+
+#users-list .user::-webkit-scrollbar {
+	width: 0;
+}
+
+#users-list .info { 
+	text-align: center;
+	font-family: sans-serif;
+	font-size: 20px;
+}
+
+#users-list .count_followers {
+	text-align: center;
+	font-family: sans-serif;
+	font-size: 20px;
+}
+
+#users-list .total_followers {
+	text-align: center;
+	font-family: sans-serif;
+	font-size: 20px;
+}
+
+img.user-detail {
+    border-radius: 50%;
+    float: left;
+}
+
+.profile-info {
+    float: left;
+    overflow: auto;
+    margin-right: 20px;
+}
+
+.image-container { 
+	margin-top: 40px;
+	margin-left: 20px;
+}
