--- a/cars/templates/cars/base.html
+++ b/cars/templates/cars/base.html
@@ -5,6 +5,7 @@
 <head>
     <title>{{title}}</title>
     <link type="text/css" href="{% static 'cars/css/styles.css' %}" rel="stylesheet" />
+    <link rel="shortcut icon" href="{% static 'images/sitelogo.png' %}" type="image/x-icon"/>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
