--- a/cars/templates/cars/addpage.html
+++ b/cars/templates/cars/addpage.html
@@ -6,10 +6,7 @@
     <form action="{% url 'addpage' %}" method="post" enctype="multipart/form-data">
         {% csrf_token %}
         <div class="form-error">{{ form.non_field_errors }}</div>
-        {% for field in form %}
-            <p><label class="form-label" for="{{ field.id_for_label }}">{{field.label}}: </label>{{ field }}</p>
-            <div class="form-error">{{ field.errors }}</div>
-        {% endfor %}
+        {{ form.as_p }}
         <button type="submit">Добавить</button>
     </form>
 {% endblock %}
